WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216018
[CG] REGRESSION (Big Sur): A GIF image with a finite loopCount loops an extra cycle
https://bugs.webkit.org/show_bug.cgi?id=216018
Summary
[CG] REGRESSION (Big Sur): A GIF image with a finite loopCount loops an extra...
Said Abou-Hallawa
Reported
2020-08-31 16:41:44 PDT
If the loopCount key/value is present in the GIF Netscape Looping Application Extension, this means loopCount = value + 1. WebKit has been doing this math for long time. Recently the underlying frameworks in macOS and iOS took care of this extra one. All we need is to adopt the new behavior but also to be backward compatible with old versions of macOS and iOS.
Attachments
Patch
(6.73 KB, patch)
2020-08-31 16:56 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.80 KB, patch)
2020-08-31 16:58 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(6.64 KB, patch)
2020-09-01 16:04 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(8.16 KB, patch)
2020-09-10 01:09 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2020-08-31 16:56:57 PDT
Created
attachment 407637
[details]
Patch
Said Abou-Hallawa
Comment 2
2020-08-31 16:58:45 PDT
Created
attachment 407638
[details]
Patch
Said Abou-Hallawa
Comment 3
2020-08-31 16:59:21 PDT
<
rdar://problem/66660579
>
Alexey Proskuryakov
Comment 4
2020-08-31 18:40:35 PDT
Comment on
attachment 407638
[details]
Patch Can this behavior be tested?
Said Abou-Hallawa
Comment 5
2020-08-31 18:47:14 PDT
It is tested by fast/images/animated-gif-loop-count.html. Having the EWS passed this test, means the backward-compatible code path is tested on macOS Catalina. I ran this test manually on macOS Big Sur, and it passed as well.
Said Abou-Hallawa
Comment 6
2020-09-01 16:04:38 PDT
Created
attachment 407717
[details]
Patch
EWS
Comment 7
2020-09-01 20:13:33 PDT
Committed
r266449
: <
https://trac.webkit.org/changeset/266449
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407717
[details]
.
Said Abou-Hallawa
Comment 8
2020-09-02 01:04:58 PDT
Reverted
r266449
for reason: Underlying frameworks do not work correctly for loopCount >= 1. Committed
r266452
: <
https://trac.webkit.org/changeset/266452
>
Said Abou-Hallawa
Comment 9
2020-09-03 15:10:59 PDT
<
rdar://problem/68304035
>
Said Abou-Hallawa
Comment 10
2020-09-10 01:09:44 PDT
Created
attachment 408420
[details]
Patch
EWS
Comment 11
2020-09-10 08:57:58 PDT
Committed
r266827
: <
https://trac.webkit.org/changeset/266827
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408420
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug